--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.inputsystem": "1.2.0",
     "com.unity.recorder": "2.5.7",
     "com.unity.render-pipelines.universal": "10.8.1",
+    "com.unity.services.analytics": "5.0.0",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
