Ignoring music from git for size considerations.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,27 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Audio/Music/AMBIENCE_BIOMECH_BIOME_LOOP.wav
+Assets/Audio/Music/AMBIENCE_BIOMECH_BIOME_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_DARK_PULSE_LOOP.wav
+Assets/Audio/Music/AMBIENCE_DARK_PULSE_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_DEEP_BIOMECHANOID_LOOP.wav
+Assets/Audio/Music/AMBIENCE_DEEP_BIOMECHANOID_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_EMPTY_SPACE_LOOP.wav
+Assets/Audio/Music/AMBIENCE_EMPTY_SPACE_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_FIRST_CONTACT_LOOP.wav
+Assets/Audio/Music/AMBIENCE_FIRST_CONTACT_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_HEARTBEAT_LOOP.wav
+Assets/Audio/Music/AMBIENCE_HEARTBEAT_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_RAGGED_PULSE_LOOP_startmenu.wav
+Assets/Audio/Music/AMBIENCE_RAGGED_PULSE_LOOP_startmenu.wav.meta
+Assets/Audio/Music/AMBIENCE_SPACECRAFT_HOLD_LOOP.wav
+Assets/Audio/Music/AMBIENCE_SPACECRAFT_HOLD_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_TUNNEL_WIND_LOOP.wav
+Assets/Audio/Music/AMBIENCE_TUNNEL_WIND_LOOP.wav.meta
+Assets/Audio/Music/AMBIENCE_WAVERING_TEXTURE_LOOP.wav
+Assets/Audio/Music/AMBIENCE_WAVERING_TEXTURE_LOOP.wav.meta
+Assets/Audio/Music/ONE_SHOT_CINEMATIC_EFFECT_01.wav
+Assets/Audio/Music/ONE_SHOT_CINEMATIC_EFFECT_01.wav.meta
+Assets/Audio/Music/ONE_SHOT_SPACE_TEAR.wav
+Assets/Audio/Music/ONE_SHOT_SPACE_TEAR.wav.meta
